mysql/sqlparser/y.output

state 0
	$accept: .any_command $end 
	explain_statement: .    (15)

	SELECT  shift 16
	INSERT  shift 17
	UPDATE  shift 18
	DELETE  shift 19
	SET  shift 20
	CREATE  shift 21
	ALTER  shift 22
	DROP  shift 24
	RENAME  shift 23
	ANALYZE  shift 25
	SHOW  shift 26
	DESCRIBE  shift 27
	EXPLAIN  shift 15
	.  reduce 15 (src line 194)

	command  goto 2
	select_statement  goto 4
	insert_statement  goto 5
	update_statement  goto 6
	delete_statement  goto 7
	set_statement  goto 8
	create_statement  goto 9
	alter_statement  goto 10
	rename_statement  goto 11
	drop_statement  goto 12
	analyze_statement  goto 13
	explain_statement  goto 3
	other_statement  goto 14
	any_command  goto 1

state 1
	$accept:  any_command.$end 

	$end  accept
	.  error


state 2
	any_command:  command.    (1)

	.  reduce 1 (src line 166)


state 3
	command:  explain_statement.    (2)

	.  reduce 2 (src line 172)


state 4
	command:  select_statement.    (3)
	select_statement:  select_statement.union_op select_statement 

	UNION  shift 29
	MINUS  shift 30
	EXCEPT  shift 31
	INTERSECT  shift 32
	.  reduce 3 (src line 174)

	union_op  goto 28

state 5
	command:  insert_statement.    (4)

	.  reduce 4 (src line 178)


state 6
	command:  update_statement.    (5)

	.  reduce 5 (src line 179)


state 7
	command:  delete_statement.    (6)

	.  reduce 6 (src line 180)


state 8
	command:  set_statement.    (7)

	.  reduce 7 (src line 181)


state 9
	command:  create_statement.    (8)

	.  reduce 8 (src line 182)


state 10
	command:  alter_statement.    (9)

	.  reduce 9 (src line 183)


state 11
	command:  rename_statement.    (10)

	.  reduce 10 (src line 184)


state 12
	command:  drop_statement.    (11)

	.  reduce 11 (src line 185)


state 13
	command:  analyze_statement.    (12)

	.  reduce 12 (src line 186)


state 14
	command:  other_statement.    (13)

	.  reduce 13 (src line 187)


state 15
	explain_statement:  EXPLAIN.explainable_stmt 

	SELECT  shift 16
	INSERT  shift 17
	UPDATE  shift 18
	DELETE  shift 19
	.  error

	select_statement  goto 34
	insert_statement  goto 35
	update_statement  goto 36
	delete_statement  goto 37
	explainable_stmt  goto 33

state 16
	select_statement:  SELECT.comment_opt distinct_opt select_expression_list FROM table_references where_expression_opt group_by_opt having_opt order_by_opt limit_opt lock_opt 
	$$40: .    (40)

	.  reduce 40 (src line 319)

	comment_opt  goto 38
	$$40  goto 39

state 17
	insert_statement:  INSERT.comment_opt ignore_opt INTO dml_table_expression column_list_opt row_list on_dup_opt 
	insert_statement:  INSERT.comment_opt ignore_opt INTO dml_table_expression SET update_list on_dup_opt 
	$$40: .    (40)

	.  reduce 40 (src line 319)

	comment_opt  goto 40
	$$40  goto 39

state 18
	update_statement:  UPDATE.comment_opt dml_table_expression SET update_list where_expression_opt order_by_opt limit_opt 
	$$40: .    (40)

	.  reduce 40 (src line 319)

	comment_opt  goto 41
	$$40  goto 39

state 19
	delete_statement:  DELETE.comment_opt FROM dml_table_expression where_expression_opt order_by_opt limit_opt 
	$$40: .    (40)

	.  reduce 40 (src line 319)

	comment_opt  goto 42
	$$40  goto 39

state 20
	set_statement:  SET.comment_opt update_list 
	$$40: .    (40)

	.  reduce 40 (src line 319)

	comment_opt  goto 43
	$$40  goto 39

state 21
	create_statement:  CREATE.TABLE not_exists_opt table_id force_eof 
	create_statement:  CREATE.constraint_opt INDEX ID using_opt ON table_id force_eof 
	create_statement:  CREATE.VIEW sql_id force_eof 
	constraint_opt: .    (220)

	TABLE  shift 44
	VIEW  shift 46
	UNIQUE  shift 47
	.  reduce 220 (src line 1129)

	constraint_opt  goto 45

state 22
	alter_statement:  ALTER.ignore_opt TABLE table_id non_rename_operation force_eof 
	alter_statement:  ALTER.ignore_opt TABLE table_id RENAME to_opt table_id 
	alter_statement:  ALTER.VIEW sql_id force_eof 
	ignore_opt: .    (211)

	VIEW  shift 49
	IGNORE  shift 50
	.  reduce 211 (src line 1107)

	ignore_opt  goto 48

state 23
	rename_statement:  RENAME.TABLE table_id TO table_id 

	TABLE  shift 51
	.  error


state 24
	drop_statement:  DROP.TABLE exists_opt table_id 
	drop_statement:  DROP.INDEX ID ON table_id 
	drop_statement:  DROP.VIEW exists_opt sql_id force_eof 

	TABLE  shift 52
	INDEX  shift 53
	VIEW  shift 54
	.  error


state 25
	analyze_statement:  ANALYZE.TABLE table_id 

	TABLE  shift 55
	.  error


state 26
	other_statement:  SHOW.force_eof 
	force_eof: .    (228)

	.  reduce 228 (src line 1166)

	force_eof  goto 56

state 27
	other_statement:  DESCRIBE.force_eof 
	force_eof: .    (228)

	.  reduce 228 (src line 1166)

	force_eof  goto 57

state 28
	select_statement:  select_statement union_op.select_statement 

	SELECT  shift 16
	.  error

	select_statement  goto 58

state 29
	union_op:  UNION.    (44)
	union_op:  UNION.ALL 

	ALL  shift 59
	.  reduce 44 (src line 338)


state 30
	union_op:  MINUS.    (46)

	.  reduce 46 (src line 347)


state 31
	union_op:  EXCEPT.    (47)

	.  reduce 47 (src line 351)


state 32
	union_op:  INTERSECT.    (48)

	.  reduce 48 (src line 355)


state 33
	explain_statement:  EXPLAIN explainable_stmt.    (14)

	.  reduce 14 (src line 189)


state 34
	explainable_stmt:  select_statement.    (16)
	select_statement:  select_statement.union_op select_statement 

	UNION  shift 29
	MINUS  shift 30
	EXCEPT  shift 31
	INTERSECT  shift 32
	.  reduce 16 (src line 199)

	union_op  goto 28

state 35
	explainable_stmt:  insert_statement.    (17)

	.  reduce 17 (src line 204)


state 36
	explainable_stmt:  update_statement.    (18)

	.  reduce 18 (src line 205)


state 37
	explainable_stmt:  delete_statement.    (19)

	.  reduce 19 (src line 206)


state 38
	select_statement:  SELECT comment_opt.distinct_opt select_expression_list FROM table_references where_expression_opt group_by_opt having_opt order_by_opt limit_opt lock_opt 
	distinct_opt: .    (49)

	DISTINCT  shift 61
	.  reduce 49 (src line 360)

	distinct_opt  goto 60

state 39
	comment_opt:  $$40.comment_list 
	comment_list: .    (42)

	.  reduce 42 (src line 329)

	comment_list  goto 62

state 40
	insert_statement:  INSERT comment_opt.ignore_opt INTO dml_table_expression column_list_opt row_list on_dup_opt 
	insert_statement:  INSERT comment_opt.ignore_opt INTO dml_table_expression SET update_list on_dup_opt 
	ignore_opt: .    (211)

	IGNORE  shift 50
	.  reduce 211 (src line 1107)

	ignore_opt  goto 63

state 41
	update_statement:  UPDATE comment_opt.dml_table_expression SET update_list where_expression_opt order_by_opt limit_opt 

	ID  shift 66
	.  error

	dml_table_expression  goto 64
	table_id  goto 65

state 42
	delete_statement:  DELETE comment_opt.FROM dml_table_expression where_expression_opt order_by_opt limit_opt 

	FROM  shift 67
	.  error


state 43
	set_statement:  SET comment_opt.update_list 

	ID  shift 73
	.  error

	column_name  goto 70
	update_list  goto 68
	update_expression  goto 69
	sql_id  goto 71
	table_id  goto 72

state 44
	create_statement:  CREATE TABLE.not_exists_opt table_id force_eof 
	not_exists_opt: .    (209)

	IF  shift 75
	.  reduce 209 (src line 1102)

	not_exists_opt  goto 74

state 45
	create_statement:  CREATE constraint_opt.INDEX ID using_opt ON table_id force_eof 

	INDEX  shift 76
	.  error


state 46
	create_statement:  CREATE VIEW.sql_id force_eof 

	ID  shift 78
	.  error

	sql_id  goto 77

state 47
	constraint_opt:  UNIQUE.    (221)

	.  reduce 221 (src line 1131)


state 48
	alter_statement:  ALTER ignore_opt.TABLE table_id non_rename_operation force_eof 
	alter_statement:  ALTER ignore_opt.TABLE table_id RENAME to_opt table_id 

	TABLE  shift 79
	.  error


state 49
	alter_statement:  ALTER VIEW.sql_id force_eof 

	ID  shift 78
	.  error

	sql_id  goto 80

state 50
	ignore_opt:  IGNORE.    (212)

	.  reduce 212 (src line 1109)


state 51
	rename_statement:  RENAME TABLE.table_id TO table_id 

	ID  shift 66
	.  error

	table_id  goto 81

state 52
	drop_statement:  DROP TABLE.exists_opt table_id 
	exists_opt: .    (207)

	IF  shift 83
	.  reduce 207 (src line 1097)

	exists_opt  goto 82

state 53
	drop_statement:  DROP INDEX.ID ON table_id 

	ID  shift 84
	.  error


state 54
	drop_statement:  DROP VIEW.exists_opt sql_id force_eof 
	exists_opt: .    (207)

	IF  shift 83
	.  reduce 207 (src line 1097)

	exists_opt  goto 85

state 55
	analyze_statement:  ANALYZE TABLE.table_id 

	ID  shift 66
	.  error

	table_id  goto 86

state 56
	other_statement:  SHOW force_eof.    (38)

	.  reduce 38 (src line 309)


state 57
	other_statement:  DESCRIBE force_eof.    (39)

	.  reduce 39 (src line 314)


state 58
	select_statement:  select_statement.union_op select_statement 
	select_statement:  select_statement union_op select_statement.    (21)

	.  reduce 21 (src line 213)

	union_op  goto 28

state 59
	union_op:  UNION ALL.    (45)

	.  reduce 45 (src line 343)


state 60
	select_statement:  SELECT comment_opt distinct_opt.select_expression_list FROM table_references where_expression_opt group_by_opt having_opt order_by_opt limit_opt lock_opt 

	EXISTS  shift 108
	KEYRANGE  shift 109
	'('  shift 110
	ID  shift 73
	STRING  shift 111
	NUMBER  shift 112
	VALUE_ARG  shift 113
	NULL  shift 114
	TRUE  shift 106
	FALSE  shift 107
	NOT  shift 95
	CASE  shift 117
	'+'  shift 100
	'-'  shift 101
	'*'  shift 89
	'~'  shift 102
	IF  shift 116
	.  error

	select_expression_list  goto 87
	select_expression  goto 88
	expression  goto 90
	boolean_expression  goto 92
	condition  goto 94
	value  goto 97
	value_expression  goto 93
	row_tuple  goto 99
	keyword_as_func  goto 104
	subquery  goto 115
	column_name  goto 98
	case_expression  goto 105
	sql_id  goto 103
	table_id  goto 91
	openb  goto 96

state 61
	distinct_opt:  DISTINCT.    (50)

	.  reduce 50 (src line 364)


state 62
	comment_opt:  $$40 comment_list.    (41)
	comment_list:  comment_list.COMMENT 

	COMMENT  shift 118
	.  reduce 41 (src line 323)


state 63
	insert_statement:  INSERT comment_opt ignore_opt.INTO dml_table_expression column_list_opt row_list on_dup_opt 
	insert_statement:  INSERT comment_opt ignore_opt.INTO dml_table_expression SET update_list on_dup_opt 

	INTO  shift 119
	.  error


state 64
	update_statement:  UPDATE comment_opt dml_table_expression.SET update_list where_expression_opt order_by_opt limit_opt 

	SET  shift 120
	.  error


state 65
	dml_table_expression:  table_id.    (89)
	dml_table_expression:  table_id.'.' table_id 

	'.'  shift 121
	.  reduce 89 (src line 547)


state 66
	table_id:  ID.    (225)

	.  reduce 225 (src line 1145)


state 67
	delete_statement:  DELETE comment_opt FROM.dml_table_expression where_expression_opt order_by_opt limit_opt 

	ID  shift 66
	.  error

	dml_table_expression  goto 122
	table_id  goto 65

state 68
	set_statement:  SET comment_opt update_list.    (26)
	update_list:  update_list.',' update_expression 

	','  shift 123
	.  reduce 26 (src line 246)


state 69
	update_list:  update_expression.    (204)

	.  reduce 204 (src line 1081)


state 70
	update_expression:  column_name.'=' value_expression 

	'='  shift 124
	.  error


state 71
	column_name:  sql_id.    (168)

	.  reduce 168 (src line 905)


state 72
	column_name:  table_id.'.' sql_id 

	'.'  shift 125
	.  error


state 73
	sql_id:  ID.    (224)
	table_id:  ID.    (225)

	'.'  reduce 225 (src line 1145)
	.  reduce 224 (src line 1139)


state 74
	create_statement:  CREATE TABLE not_exists_opt.table_id force_eof 

	ID  shift 66
	.  error

	table_id  goto 126

state 75
	not_exists_opt:  IF.NOT EXISTS 

	NOT  shift 127
	.  error


state 76
	create_statement:  CREATE constraint_opt INDEX.ID using_opt ON table_id force_eof 

	ID  shift 128
	.  error


state 77
	create_statement:  CREATE VIEW sql_id.force_eof 
	force_eof: .    (228)

	.  reduce 228 (src line 1166)

	force_eof  goto 129

state 78
	sql_id:  ID.    (224)

	.  reduce 224 (src line 1139)


state 79
	alter_statement:  ALTER ignore_opt TABLE.table_id non_rename_operation force_eof 
	alter_statement:  ALTER ignore_opt TABLE.table_id RENAME to_opt table_id 

	ID  shift 66
	.  error

	table_id  goto 130

state 80
	alter_statement:  ALTER VIEW sql_id.force_eof 
	force_eof: .    (228)

	.  reduce 228 (src line 1166)

	force_eof  goto 131

state 81
	rename_statement:  RENAME TABLE table_id.TO table_id 

	TO  shift 132
	.  error


state 82
	drop_statement:  DROP TABLE exists_opt.table_id 

	ID  shift 66
	.  error

	table_id  goto 133

state 83
	exists_opt:  IF.EXISTS 

	EXISTS  shift 134
	.  error


state 84
	drop_statement:  DROP INDEX ID.ON table_id 

	ON  shift 135
	.  error


state 85
	drop_statement:  DROP VIEW exists_opt.sql_id force_eof 

	ID  shift 78
	.  error

	sql_id  goto 136

state 86
	analyze_statement:  ANALYZE TABLE table_id.    (37)

	.  reduce 37 (src line 303)


state 87
	select_statement:  SELECT comment_opt distinct_opt select_expression_list.FROM table_references where_expression_opt group_by_opt having_opt order_by_opt limit_opt lock_opt 
	select_expression_list:  select_expression_list.',' select_expression 

	FROM  shift 137
	','  shift 138
	.  error


state 88
	select_expression_list:  select_expression.    (51)

	.  reduce 51 (src line 369)


state 89
	select_expression:  '*'.    (53)

	.  reduce 53 (src line 379)


state 90
	select_expression:  expression.as_lower_opt 
	as_lower_opt: .    (58)

	AS  shift 141
	ID  shift 78
	.  reduce 58 (src line 403)

	sql_id  goto 140
	as_lower_opt  goto 139

state 91
	select_expression:  table_id.'.' '*' 
	column_name:  table_id.'.' sql_id 

	'.'  shift 142
	.  error


state 92
	expression:  boolean_expression.    (56)
	boolean_expression:  boolean_expression.AND boolean_expression 
	boolean_expression:  boolean_expression.OR boolean_expression 
	boolean_expression:  boolean_expression.IS is_suffix 

	OR  shift 144
	AND  shift 143
	IS  shift 145
	.  reduce 56 (src line 393)


state 93
	expression:  value_expression.    (57)
	condition:  value_expression.compare value_expression 
	condition:  value_expression.IN col_tuple 
	condition:  value_expression.NOT IN col_tuple 
	condition:  value_expression.LIKE value_expression 
	condition:  value_expression.NOT LIKE value_expression 
	condition:  value_expression.REGEXP value_expression 
	condition:  value_expression.NOT REGEXP value_expression 
	condition:  value_expression.BETWEEN value_expression AND value_expression 
	condition:  value_expression.NOT BETWEEN value_expression AND value_expression 
	condition:  value_expression.IS is_suffix 
	value_expression:  value_expression.'&' value_expression 
	value_expression:  value_expression.'|' value_expression 
	value_expression:  value_expression.'^' value_expression 
	value_expression:  value_expression.'+' value_expression 
	value_expression:  value_expression.'-' value_expression 
	value_expression:  value_expression.'*' value_expression 
	value_expression:  value_expression.'/' value_expression 
	value_expression:  value_expression.'%' value_expression 
	value_expression:  value_expression.SHIFT_LEFT value_expression 
	value_expression:  value_expression.SHIFT_RIGHT value_expression 

	NOT  shift 148
	BETWEEN  shift 151
	'='  shift 163
	'<'  shift 164
	'>'  shift 165
	LE  shift 166
	GE  shift 167
	NE  shift 168
	NULL_SAFE_EQUAL  shift 169
	IS  shift 152
	LIKE  shift 149
	REGEXP  shift 150
	IN  shift 147
	'|'  shift 154
	'&'  shift 153
	SHIFT_LEFT  shift 161
	SHIFT_RIGHT  shift 162
	'+'  shift 156
	'-'  shift 157
	'*'  shift 158
	'/'  shift 159
	'%'  shift 160
	'^'  shift 155
	.  reduce 57 (src line 398)

	compare  goto 146

state 94
	boolean_expression:  condition.    (99)

	.  reduce 99 (src line 593)


state 95
	boolean_expression:  NOT.boolean_expression 

	EXISTS  shift 108
	KEYRANGE  shift 109
	'('  shift 110
	ID  shift 73
	STRING  shift 111
	NUMBER  shift 112
	VALUE_ARG  shift 113
	NULL  shift 114
	TRUE  shift 106
	FALSE  shift 107
	NOT  shift 95
	CASE  shift 117
	'+'  shift 100
	'-'  shift 101
	'~'  shift 102
	IF  shift 116
	.  error

	boolean_expression  goto 170
	condition  goto 94
	value  goto 97
	value_expression  goto 171
	row_tuple  goto 99
	keyword_as_func  goto 104
	subquery  goto 115
	column_name  goto 98
	case_expression  goto 105
	sql_id  goto 103
	table_id  goto 72
	openb  goto 96

state 96
	boolean_expression:  openb.boolean_expression closeb 
	subquery:  openb.select_statement closeb 
	row_tuple:  openb.value_expression_list closeb 

	SELECT  shift 16
	EXISTS  shift 108
	KEYRANGE  shift 109
	'('  shift 110
	ID  shift 73
	STRING  shift 111
	NUMBER  shift 112
	VALUE_ARG  shift 113
	NULL  shift 114
	TRUE  shift 106
	FALSE  shift 107
	NOT  shift 95
	CASE  shift 117
	'+'  shift 100
	'-'  shift 101
	'~'  shift 102
	IF  shift 116
	.  error

	select_statement  goto 173
	boolean_expression  goto 172
	condition  goto 94
	value  goto 97
	value_expression  goto 175
	value_expression_list  goto 174
	row_tuple  goto 99
	keyword_as_func  goto 104
	subquery  goto 115
	column_name  goto 98
	case_expression  goto 105
	sql_id  goto 103
	table_id  goto 72
	openb  goto 96

state 97
	value_expression:  value.    (138)

	.  reduce 138 (src line 760)


state 98
	value_expression:  column_name.    (139)

	.  reduce 139 (src line 765)


state 99
	value_expression:  row_tuple.    (140)

	.  reduce 140 (src line 769)


state 100
	value_expression:  '+'.value_expression 

	'('  shift 110
	ID  shift 73
	STRING  shift 111
	NUMBER  shift 112
	VALUE_ARG  shift 113
	NULL  shift 114
	CASE  shift 117
	'+'  shift 100
	'-'  shift 101
	'~'  shift 102
	IF  shift 116
	.  error

	value  goto 97
	value_expression  goto 176
	row_tuple  goto 99
	keyword_as_func  goto 104
	subquery  goto 115
	column_name  goto 98
	case_expression  goto 105
	sql_id  goto 103
	table_id  goto 72
	openb  goto 177

state 101
	value_expression:  '-'.value_expression 

	'('  shift 110
	ID  shift 73
	STRING  shift 111
	NUMBER  shift 112
	VALUE_ARG  shift 113
	NULL  shift 114
	CASE  shift 117
	'+'  shift 100
	'-'  shift 101
	'~'  shift 102
	IF  shift 116
	.  error

	value  goto 97
	value_expression  goto 178
	row_tuple  goto 99
	keyword_as_func  goto 104
	subquery  goto 115
	column_name  goto 98
	case_expression  goto 105
	sql_id  goto 103
	table_id  goto 72
	openb  goto 177

state 102
	value_expression:  '~'.value_expression 

	'('  shift 110
	ID  shift 73
	STRING  shift 111
	NUMBER  shift 112
	VALUE_ARG  shift 113
	NULL  shift 114
	CASE  shift 117
	'+'  shift 100
	'-'  shift 101
	'~'  shift 102
	IF  shift 116
	.  error

	value  goto 97
	value_expression  goto 179
	row_tuple  goto 99
	keyword_as_func  goto 104
	subquery  goto 115
	column_name  goto 98
	case_expression  goto 105
	sql_id  goto 103
	table_id  goto 72
	openb  goto 177

state 103
	value_expression:  sql_id.openb closeb 
	value_expression:  sql_id.openb select_expression_list closeb 
	value_expression:  sql_id.openb DISTINCT select_expression_list closeb 
	column_name:  sql_id.    (168)

	'('  shift 110
	.  reduce 168 (src line 905)

	openb  goto 180

state 104
	value_expression:  keyword_as_func.openb select_expression_list closeb 

	'('  shift 110
	.  error

	openb  goto 181

state 105
	value_expression:  case_expression.    (158)

	.  reduce 158 (src line 854)


state 106
	condition:  TRUE.    (105)

	.  reduce 105 (src line 616)


state 107
	condition:  FALSE.    (106)

	.  reduce 106 (src line 621)


state 108
	condition:  EXISTS.subquery 

	'('  shift 110
	.  error

	subquery  goto 182
	openb  goto 183

state 109
	condition:  KEYRANGE.openb value ',' value closeb 

	'('  shift 110
	.  error

	openb  goto 184

state 110
	openb:  '('.    (226)

	.  reduce 226 (src line 1151)


state 111
	value:  STRING.    (170)

	.  reduce 170 (src line 915)


state 112
	value:  NUMBER.    (171)

	.  reduce 171 (src line 920)


state 113
	value:  VALUE_ARG.    (172)

	.  reduce 172 (src line 924)


state 114
	value:  NULL.    (173)

	.  reduce 173 (src line 928)


state 115
	row_tuple:  subquery.    (203)

	.  reduce 203 (src line 1076)


state 116
	keyword_as_func:  IF.    (159)

	.  reduce 159 (src line 859)


state 117
	case_expression:  CASE.value_expression_opt when_expression_list else_expression_opt END 
	value_expression_opt: .    (161)

	'('  shift 110
	ID  shift 73
	STRING  shift 111
	NUMBER  shift 112
	VALUE_ARG  shift 113
	NULL  shift 114
	CASE  shift 117
	'+'  shift 100
	'-'  shift 101
	'~'  shift 102
	IF  shift 116
	.  reduce 161 (src line 871)

	value  goto 97
	value_expression  goto 186
	row_tuple  goto 99
	keyword_as_func  goto 104
	subquery  goto 115
	column_name  goto 98
	case_expression  goto 105
	value_expression_opt  goto 185
	sql_id  goto 103
	table_id  goto 72
	openb  goto 177

state 118
	comment_list:  comment_list COMMENT.    (43)

	.  reduce 43 (src line 333)


state 119
	insert_statement:  INSERT comment_opt ignore_opt INTO.dml_table_expression column_list_opt row_list on_dup_opt 
	insert_statement:  INSERT comment_opt ignore_opt INTO.dml_table_expression SET update_list on_dup_opt 

	ID  shift 66
	.  error

	dml_table_expression  goto 187
	table_id  goto 65

state 120
	update_statement:  UPDATE comment_opt dml_table_expression SET.update_list where_expression_opt order_by_opt limit_opt 

	ID  shift 73
	.  error

	column_name  goto 70
	update_list  goto 188
	update_expression  goto 69
	sql_id  goto 71
	table_id  goto 72

state 121
	dml_table_expression:  table_id '.'.table_id 

	ID  shift 66
	.  error

	table_id  goto 189

state 122
	delete_statement:  DELETE comment_opt FROM dml_table_expression.where_expression_opt order_by_opt limit_opt 
	where_expression_opt: .    (97)

	WHERE  shift 191
	.  reduce 97 (src line 584)

	where_expression_opt  goto 190

state 123
	update_list:  update_list ','.update_expression 

	ID  shift 73
	.  error

	column_name  goto 70
	update_expression  goto 192
	sql_id  goto 71
	table_id  goto 72

state 124
	update_expression:  column_name '='.value_expression 

	'('  shift 110
	ID  shift 73
	STRING  shift 111
	NUMBER  shift 112
	VALUE_ARG  shift 113
	NULL  shift 114
	CASE  shift 117
	'+'  shift 100
	'-'  shift 101
	'~'  shift 102
	IF  shift 116
	.  error

	value  goto 97
	value_expression  goto 193
	row_tuple  goto 99
	keyword_as_func  goto 104
	subquery  goto 115
	column_name  goto 98
	case_expression  goto 105
	sql_id  goto 103
	table_id  goto 72
	openb  goto 177

state 125
	column_name:  table_id '.'.sql_id 

	ID  shift 78
	.  error

	sql_id  goto 194

state 126
	create_statement:  CREATE TABLE not_exists_opt table_id.force_eof 
	force_eof: .    (228)

	.  reduce 228 (src line 1166)

	force_eof  goto 195

state 127
	not_exists_opt:  IF NOT.EXISTS 

	EXISTS  shift 196
	.  error


state 128
	create_statement:  CREATE constraint_opt INDEX ID.using_opt ON table_id force_eof 
	using_opt: .    (222)

	USING  shift 198
	.  reduce 222 (src line 1134)

	using_opt  goto 197

state 129
	create_statement:  CREATE VIEW sql_id force_eof.    (29)

	.  reduce 29 (src line 262)


state 130
	alter_statement:  ALTER ignore_opt TABLE table_id.non_rename_operation force_eof 
	alter_statement:  ALTER ignore_opt TABLE table_id.RENAME to_opt table_id 

	ORDER  shift 204
	DEFAULT  shift 202
	ID  shift 205
	ALTER  shift 201
	DROP  shift 203
	RENAME  shift 200
	.  error

	non_rename_operation  goto 199

state 131
	alter_statement:  ALTER VIEW sql_id force_eof.    (32)

	.  reduce 32 (src line 277)


state 132
	rename_statement:  RENAME TABLE table_id TO.table_id 

	ID  shift 66
	.  error

	table_id  goto 206

state 133
	drop_statement:  DROP TABLE exists_opt table_id.    (34)

	.  reduce 34 (src line 288)


state 134
	exists_opt:  IF EXISTS.    (208)

	.  reduce 208 (src line 1099)


state 135
	drop_statement:  DROP INDEX ID ON.table_id 

	ID  shift 66
	.  error

	table_id  goto 207

state 136
	drop_statement:  DROP VIEW exists_opt sql_id.force_eof 
	force_eof: .    (228)

	.  reduce 228 (src line 1166)

	force_eof  goto 208

state 137
	select_statement:  SELECT comment_opt distinct_opt select_expression_list FROM.table_references where_expression_opt group_by_opt having_opt order_by_opt limit_opt lock_opt 

	'('  shift 110
	ID  shift 66
	.  error

	table_references  goto 209
	table_reference  goto 210
	table_factor  goto 211
	join_table  goto 212
	simple_table_expression  goto 213
	subquery  goto 214
	table_id  goto 216
	openb  goto 215

state 138
	select_expression_list:  select_expression_list ','.select_expression 

	EXISTS  shift 108
	KEYRANGE  shift 109
	'('  shift 110
	ID  shift 73
	STRING  shift 111
	NUMBER  shift 112
	VALUE_ARG  shift 113
	NULL  shift 114
	TRUE  shift 106
	FALSE  shift 107
	NOT  shift 95
	CASE  shift 117
	'+'  shift 100
	'-'  shift 101
	'*'  shift 89
	'~'  shift 102
	IF  shift 116
	.  error

	select_expression  goto 217
	expression  goto 90
	boolean_expression  goto 92
	condition  goto 94
	value  goto 97
	value_expression  goto 93
	row_tuple  goto 99
	keyword_as_func  goto 104
	subquery  goto 115
	column_name  goto 98
	case_expression  goto 105
	sql_id  goto 103
	table_id  goto 91
	openb  goto 96

state 139
	select_expression:  expression as_lower_opt.    (54)

	.  reduce 54 (src line 384)


state 140
	as_lower_opt:  sql_id.    (59)

	.  reduce 59 (src line 407)


state 141
	as_lower_opt:  AS.sql_id 

	ID  shift 78
	.  error

	sql_id  goto 218

state 142
	select_expression:  table_id '.'.'*' 
	column_name:  table_id '.'.sql_id 

	ID  shift 78
	'*'  shift 219
	.  error

	sql_id  goto 194

state 143
	boolean_expression:  boolean_expression AND.boolean_expression 

	EXISTS  shift 108
	KEYRANGE  shift 109
	'('  shift 110
	ID  shift 73
	STRING  shift 111
	NUMBER  shift 112
	VALUE_ARG  shift 113
	NULL  shift 114
	TRUE  shift 106
	FALSE  shift 107
	NOT  shift 95
	CASE  shift 117
	'+'  shift 100
	'-'  shift 101
	'~'  shift 102
	IF  shift 116
	.  error

	boolean_expression  goto 220
	condition  goto 94
	value  goto 97
	value_expression  goto 171
	row_tuple  goto 99
	keyword_as_func  goto 104
	subquery  goto 115
	column_name  goto 98
	case_expression  goto 105
	sql_id  goto 103
	table_id  goto 72
	openb  goto 96

state 144
	boolean_expression:  boolean_expression OR.boolean_expression 

	EXISTS  shift 108
	KEYRANGE  shift 109
	'('  shift 110
	ID  shift 73
	STRING  shift 111
	NUMBER  shift 112
	VALUE_ARG  shift 113
	NULL  shift 114
	TRUE  shift 106
	FALSE  shift 107
	NOT  shift 95
	CASE  shift 117
	'+'  shift 100
	'-'  shift 101
	'~'  shift 102
	IF  shift 116
	.  error

	boolean_expression  goto 221
	condition  goto 94
	value  goto 97
	value_expression  goto 171
	row_tuple  goto 99
	keyword_as_func  goto 104
	subquery  goto 115
	column_name  goto 98
	case_expression  goto 105
	sql_id  goto 103
	table_id  goto 72
	openb  goto 96

state 145
	boolean_expression:  boolean_expression IS.is_suffix 

	NULL  shift 223
	TRUE  shift 225
	FALSE  shift 226
	NOT  shift 224
	.  error

	is_suffix  goto 222

state 146
	condition:  value_expression compare.value_expression 

	'('  shift 110
	ID  shift 73
	STRING  shift 111
	NUMBER  shift 112
	VALUE_ARG  shift 113
	NULL  shift 114
	CASE  shift 117
	'+'  shift 100
	'-'  shift 101
	'~'  shift 102
	IF  shift 116
	.  error

	value  goto 97
	value_expression  goto 227
	row_tuple  goto 99
	keyword_as_func  goto 104
	subquery  goto 115
	column_name  goto 98
	case_expression  goto 105
	sql_id  goto 103
	table_id  goto 72
	openb  goto 177

state 147
	condition:  value_expression IN.col_tuple 

	'('  shift 110
	LIST_ARG  shift 231
	.  error

	col_tuple  goto 228
	subquery  goto 230
	openb  goto 229

state 148
	condition:  value_expression NOT.IN col_tuple 
	condition:  value_expression NOT.LIKE value_expression 
	condition:  value_expression NOT.REGEXP value_expression 
	condition:  value_expression NOT.BETWEEN value_expression AND value_expression 

	BETWEEN  shift 235
	LIKE  shift 233
	REGEXP  shift 234
	IN  shift 232
	.  error


state 149
	condition:  value_expression LIKE.value_expression 

	'('  shift 110
	ID  shift 73
	STRING  shift 111
	NUMBER  shift 112
	VALUE_ARG  shift 113
	NULL  shift 114
	CASE  shift 117
	'+'  shift 100
	'-'  shift 101
	'~'  shift 102
	IF  shift 116
	.  error

	value  goto 97
	value_expression  goto 236
	row_tuple  goto 99
	keyword_as_func  goto 104
	subquery  goto 115
	column_name  goto 98
	case_expression  goto 105
	sql_id  goto 103
	table_id  goto 72
	openb  goto 177

state 150
	condition:  value_expression REGEXP.value_expression 

	'('  shift 110
	ID  shift 73
	STRING  shift 111
	NUMBER  shift 112
	VALUE_ARG  shift 113
	NULL  shift 114
	CASE  shift 117
	'+'  shift 100
	'-'  shift 101
	'~'  shift 102
	IF  shift 116
	.  error

	value  goto 97
	value_expression  goto 237
	row_tuple  goto 99
	keyword_as_func  goto 104
	subquery  goto 115
	column_name  goto 98
	case_expression  goto 105
	sql_id  goto 103
	table_id  goto 72
	openb  goto 177

state 151
	condition:  value_expression BETWEEN.value_expression AND value_expression 

	'('  shift 110
	ID  shift 73
	STRING  shift 111
	NUMBER  shift 112
	VALUE_ARG  shift 113
	NULL  shift 114
	CASE  shift 117
	'+'  shift 100
	'-'  shift 101
	'~'  shift 102
	IF  shift 116
	.  error

	value  goto 97
	value_expression  goto 238
	row_tuple  goto 99
	keyword_as_func  goto 104
	subquery  goto 115
	column_name  goto 98
	case_expression  goto 105
	sql_id  goto 103
	table_id  goto 72
	openb  goto 177

state 152
	condition:  value_expression IS.is_suffix 

	NULL  shift 223
	TRUE  shift 225
	FALSE  shift 226
	NOT  shift 224
	.  error

	is_suffix  goto 239

state 153
	value_expression:  value_expression '&'.value_expression 

	'('  shift 110
	ID  shift 73
	STRING  shift 111
	NUMBER  shift 112
	VALUE_ARG  shift 113
	NULL  shift 114
	CASE  shift 117
	'+'  shift 100
	'-'  shift 101
	'~'  shift 102
	IF  shift 116
	.  error

	value  goto 97
	value_expression  goto 240
	row_tuple  goto 99
	keyword_as_func  goto 104
	subquery  goto 115
	column_name  goto 98
	case_expression  goto 105
	sql_id  goto 103
	table_id  goto 72
	openb  goto 177

state 154
	value_expression:  value_expression '|'.value_expression 

	'('  shift 110
	ID  shift 73
	STRING  shift 111
	NUMBER  shift 112
	VALUE_ARG  shift 113
	NULL  shift 114
	CASE  shift 117
	'+'  shift 100
	'-'  shift 101
	'~'  shift 102
	IF  shift 116
	.  error
